ODX-31:Add latest module
