# profiles/opendevx/config/install/core.entity_view_display.node.api_document.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.api_document.field_api_categories
     - field.field.node.api_document.field_api_display
     - field.field.node.api_document.field_api_type
+    - field.field.node.api_document.field_apigee_proxy
     - field.field.node.api_document.field_apigwid
     - field.field.node.api_document.field_banners_image
     - field.field.node.api_document.field_document
@@ -205,6 +206,22 @@ third_party_settings:
                 type: list_default
             additional: {  }
             weight: 10
+          189e8cd8-5703-4443-a73a-7a64d69603e3:
+            uuid: 189e8cd8-5703-4443-a73a-7a64d69603e3
+            region: content
+            configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              id: 'field_block:node:api_document:field_apigee_proxy'
+              formatter:
+                label: above
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+                type: string
+            additional: {  }
+            weight: 11
         third_party_settings: {  }
 id: node.api_document.default
 targetEntityType: node
@@ -244,6 +261,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_apigee_proxy:
+    weight: 11
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_apigwid:
     weight: 8
