# profiles/opendevx/modules/custom/opendevx_core/src/Plugin/views/filter/ProgramIdFilterPlugin.php
@@ -3,8 +3,8 @@
 namespace Drupal\opendevx_core\Plugin\views\filter;
 
 use Drupal\views\Plugin\views\filter\FilterPluginBase;
-use Drupal\opendevx_core\Program\ProgramDomainInterface;
 use Symfony\Component\DependencyInjection\ContainerInterface;
+use Drupal\opendevx_core\Program\ProgramDomainInterface;
 
 /**
  * Filters program on current domain.
@@ -32,12 +32,12 @@ class ProgramIdFilterPlugin extends FilterPluginBase {
   /**
    * {@inheritdoc}
    */
-  public static function create(ContainerInterface $container, array $configuration, $plugin_id, $plugin_definition) {
+  public static function create(ContainerInterface $container, array $configuration, $pluginId, $pluginDefinition) {
     return new static(
       $plugin_id,
       $plugin_definition,
-      $container->get('opendevx_core.program_domain')
-
+      $container->get('opendevx_core.program_domain'),
+    
     );
   }
 
